Fix build error.